Bug 1589955 - Sync-decode images when intrinsic ratio between the old and new source changes. r=tnikkel

This seems to fix it for me, and it's pretty straight-forward, but I _think_
we'd still paint the old image if the image is huge and it's loading, which
may be counter-productive. Maybe we should guard the whole "paint mOldImage"
with and if (!oldImageIsDifferent), wdyt?

Differential Revision: https://phabricator.services.mozilla.com/D50062

--HG--
extra : moz-landing-system : lando